[tool.poetry]
name = "gae-cargo-theft"
version = "0.1.0"
description = ""
authors = ["Gustavo Grande <gustavobgrande@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
